tests/errors/surf_parse_03.ki
# PARSER: a for-loop header missing the ':' before its body
for i in [1, 2, 3]
    discard i